# diff-interp

./: .gitignore  README.md  pyproject.toml
lightning_logs/: .gitattributes
lightning_logs/train_1/checkpoints/: epoch=29-step=19080.ckpt
notebooks/: celeba_classifiers.ipynb  load_checkpoint.ipynb
src/diff_interp/: celeba_data_module.py  download_data.py  train.py  variables.py  vit_model.py
tests/: test_celeba_data_module.py  test_vit_model.py
